--- a/多云/index.html
+++ b/多云/index.html
@@ -110,7 +110,14 @@
                 <i class="far fa-clock fa-fw"></i>&nbsp;预计阅读 13 分钟&nbsp;<span id="/%E5%A4%9A%E4%BA%91/" class="leancloud_visitors" data-flag-title="istio - 多集群管控入门">
                         <i class="far fa-eye fa-fw"></i>&nbsp;<span class=leancloud-visitors-count></span>&nbsp;次阅读
                     </span>&nbsp;</div>
-        </div><div class="details toc" id="toc-static"  kept="">
+        </div><div class="featured-image"><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="/images/featured-image.jpg"
+        data-srcset="/images/featured-image.jpg, /images/featured-image.jpg 1.5x, /images/featured-image.jpg 2x"
+        data-sizes="auto"
+        alt="/images/featured-image.jpg"
+        title="istio 多集群管控流程介绍." /></div><div class="details toc" id="toc-static"  kept="">
                 <div class="details-summary toc-title">
                     <span>目录</span>
                     <span><i class="details-icon fas fa-angle-right"></i></span>
@@ -1122,7 +1129,7 @@ $  curl http://<span class="nv">$EXT_IP</span>/api/catalog -H <span class="s2">&
                             <a class="link-to-markdown" href="/%E5%A4%9A%E4%BA%91/index.md" target="_blank">阅读原始文档</a>
                         </span></div>
             <div class="post-info-share">
-                <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门" data-hashtags="istio,多集群"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-hashtag="istio"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门"><i class="fab fa-hacker-news fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/line.svg"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门" data-ralateuid="xxxx"><i class="fab fa-weibo fa-fw"></i></a></span>
+                <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门" data-hashtags="istio,多集群"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-hashtag="istio"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门"><i class="fab fa-hacker-news fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/line.svg"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://zhengtianchi.github.io/%E5%A4%9A%E4%BA%91/" data-title="istio - 多集群管控入门" data-image="/images/featured-image.jpg" data-ralateuid="xxxx"><i class="fab fa-weibo fa-fw"></i></a></span>
             </div>
         </div>
     </div>
