--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             <a href="/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/"><img
         class="lazyload"
         src="/svg/loading.min.svg"
-        data-src="/images/image2.png"
-        data-srcset="/images/image2.png, /images/image2.png 1.5x, /images/image2.png 2x"
+        data-src="/images/images2.png"
+        data-srcset="/images/images2.png, /images/images2.png 1.5x, /images/images2.png 2x"
         data-sizes="auto"
-        alt="/images/image2.png"
+        alt="/images/images2.png"
         title="istio 问题排查流程." /></a>
         </div><h1 class="single-title" itemprop="name headline">
         <a href="/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/">istio - 问题排查</a>
