--- a/问题排查/index.html
+++ b/问题排查/index.html
@@ -113,10 +113,10 @@
         </div><div class="featured-image"><img
         class="lazyload"
         src="/svg/loading.min.svg"
-        data-src="/images/image2.png"
-        data-srcset="/images/image2.png, /images/image2.png 1.5x, /images/image2.png 2x"
+        data-src="/images/images2.png"
+        data-srcset="/images/images2.png, /images/images2.png 1.5x, /images/images2.png 2x"
         data-sizes="auto"
-        alt="/images/image2.png"
+        alt="/images/images2.png"
         title="istio 问题排查流程." /></div><div class="details toc" id="toc-static"  kept="">
                 <div class="details-summary toc-title">
                     <span>目录</span>
@@ -1874,7 +1874,7 @@ $ ./query-catalog.sh get-items-cont
                             <a class="link-to-markdown" href="/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/index.md" target="_blank">阅读原始文档</a>
                         </span></div>
             <div class="post-info-share">
-                <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-hashtags="istio"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-hashtag="istio"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i class="fab fa-hacker-news fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/line.svg"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-image="/images/image2.png" data-ralateuid="xxxx"><i class="fab fa-weibo fa-fw"></i></a></span>
+                <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-hashtags="istio"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-hashtag="istio"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i class="fab fa-hacker-news fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/line.svg"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-image="/images/images2.png" data-ralateuid="xxxx"><i class="fab fa-weibo fa-fw"></i></a></span>
             </div>
         </div>
     </div>
