--- a/问题排查/index.html
+++ b/问题排查/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>istio - 问题排查 - 卷王郑天驰</title><meta name="Description" content="istio 问题排查流程."><meta property="og:title" content="istio - 问题排查" />
+        <title>istio - 问题排查 - skyrun</title><meta name="Description" content="istio 问题排查流程."><meta property="og:title" content="istio - 问题排查" />
 <meta property="og:description" content="istio 问题排查流程." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" /><meta property="og:image" content="https://zhengtianchi.github.io/logo.png"/><meta property="article:section" content="posts" />
@@ -43,7 +43,14 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="卷王郑天驰"><span class="header-title-pre"><i class='far fa-kiss-wink-heart fa-fw'></i></span>卷王郑天驰</a>
+            <a href="/" title="skyrun"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg"
+        data-srcset="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg, https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg 1.5x, https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg 2x"
+        data-sizes="auto"
+        alt="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg"
+        title="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg" /><span class="header-title-pre"><i class='far fa-kiss-wink-heart fa-fw'></i></span>skyrun郑天驰</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/zhengtianchi/" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -67,7 +74,14 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="卷王郑天驰"><span class="header-title-pre"><i class='far fa-kiss-wink-heart fa-fw'></i></span>卷王郑天驰</a>
+                <a href="/" title="skyrun"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg"
+        data-srcset="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg, https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg 1.5x, https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg 2x"
+        data-sizes="auto"
+        alt="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg"
+        title="https://imgo.hackhome.com/img2021/9/1/10/472248698.jpg" /><span class="header-title-pre"><i class='far fa-kiss-wink-heart fa-fw'></i></span>skyrun郑天驰</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -1874,7 +1888,7 @@ $ ./query-catalog.sh get-items-cont
                             <a class="link-to-markdown" href="/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/index.md" target="_blank">阅读原始文档</a>
                         </span></div>
             <div class="post-info-share">
-                <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-hashtags="istio"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-hashtag="istio"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i class="fab fa-hacker-news fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/line.svg"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-image="/images/images2.png" data-ralateuid="xxxx"><i class="fab fa-weibo fa-fw"></i></a></span>
+                <span><a href="javascript:void(0);" title="分享到 Twitter" data-sharer="twitter" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-hashtags="istio"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Facebook" data-sharer="facebook" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-hashtag="istio"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Hacker News" data-sharer="hackernews" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i class="fab fa-hacker-news fa-fw"></i></a><a href="javascript:void(0);" title="分享到 Line" data-sharer="line" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查"><i data-svg-src="https://cdn.jsdelivr.net/npm/simple-icons@2.14.0/icons/line.svg"></i></a><a href="javascript:void(0);" title="分享到 微博" data-sharer="weibo" data-url="https://zhengtianchi.github.io/%E9%97%AE%E9%A2%98%E6%8E%92%E6%9F%A5/" data-title="istio - 问题排查" data-image="/images/images2.png"><i class="fab fa-weibo fa-fw"></i></a></span>
             </div>
         </div>
     </div>
@@ -1894,7 +1908,7 @@ $ ./query-catalog.sh get-items-cont
             </noscript></div></article></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">由 <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.87.0">Hugo</a> 强力驱动 | 主题 - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
-                </div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">xxxx</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
+                </div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2021</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">郑天驰</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
         </div>
     </footer></div>
 
